<resources>
    <string name="app_name">FM TEL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Log In</string>
    <string name="pin_code">PIN Code</string>
    <string name="login_id">Login ID</string>
    <string name="fm_tel">FM Tel</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="available_cash">Available Balance:  </string>
    <string name="more">More</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="digital_store">Digital Store</string>
    <string name="telecommunication">Telecommunication</string>
    <string name="games">Games</string>
    <string name="app_store_itunes"><![CDATA[App Store & iTunes]]></string>
    <string name="star_line">**************************************************************************************************************************************</string>
</resources>