<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/teal_200"
    tools:context=".fragments.SignInFragment">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_android_black_24dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/extra_big_text"
        android:text="@string/fm_tel"
        android:fontFamily="@font/montserrat_subrayada_bold"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"/>
    <EditText
        android:id="@+id/mail"
        android:fontFamily="@font/poppins_regular"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="8dp"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/edittext_bg"
        android:clickable="true"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:hint="@string/login_id"
        android:paddingHorizontal="12dp"
        android:inputType="text"
        android:textColor="@color/txt_clr"
        android:textColorHint="@color/txt_clr_grey"
        android:textSize="@dimen/very_small_text"
        android:autofillHints=" " />
    <EditText
        android:id="@+id/pin_code"
        android:drawableStart="@drawable/protect_icon"
        android:drawablePadding="8dp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/edittext_bg"
        android:clickable="true"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:hint="@string/pin_code"
        android:paddingHorizontal="12dp"
        android:inputType="textPassword"
        app:passwordToggleEnabled="true"
        android:textColor="@color/txt_clr"
        android:textColorHint="@color/txt_clr_grey"
        android:textSize="@dimen/very_small_text"
        android:autofillHints=" " />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:cornerRadius="12dp"
        android:text="@string/login"
        android:textColor="@color/teal_200"
        android:backgroundTint="@color/btn_clr"
        android:fontFamily="@font/poppins_bold"
        android:textSize="@dimen/small_text"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"/>
</LinearLayout>