<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.unused.gamesFragment">

    <Toolbar
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200">
        <LinearLayout
            android:paddingVertical="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginHorizontal="12dp"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/title"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium_text"
                android:fontFamily="@font/montserrat_subrayada_bold"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/fm_tel"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/available_cash"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="@dimen/small_text"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.00"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="@dimen/small_text"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/small_text"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/white"
                android:text="@string/games"
                />
        </LinearLayout>
    </Toolbar>
    <GridLayout
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp"
        android:columnCount="2"
        android:rowCount="5"
        android:layout_height="0dp">
        <com.google.android.material.card.MaterialCardView
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:cardCornerRadius="12dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="4dp">
            <LinearLayout
                android:id="@+id/games_namme"
                android:background="@drawable/card_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal|center_vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/puubg"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:textSize="@dimen/small_text"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/txt_clr"
                    android:text="PUBG Pins"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:cardCornerRadius="12dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="4dp">
            <LinearLayout

                android:background="@drawable/card_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal|center_vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/puubg"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:textSize="@dimen/small_text"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/txt_clr"
                    android:text="PUBG Pins"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:cardCornerRadius="12dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="4dp">
            <LinearLayout

                android:background="@drawable/card_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal|center_vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/puubg"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:textSize="@dimen/small_text"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/txt_clr"
                    android:text="PUBG Pins"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:cardCornerRadius="12dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="4dp">
            <LinearLayout

                android:background="@drawable/card_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal|center_vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/puubg"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:textSize="@dimen/small_text"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/txt_clr"
                    android:text="PUBG Pins"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:cardCornerRadius="12dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="4dp">
            <LinearLayout

                android:background="@drawable/card_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal|center_vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/puubg"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:textSize="@dimen/small_text"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/txt_clr"
                    android:text="PUBG Pins"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:cardCornerRadius="12dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="4dp">
            <LinearLayout

                android:background="@drawable/card_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal|center_vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/puubg"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:textSize="@dimen/small_text"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/txt_clr"
                    android:text="PUBG Pins"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:cardCornerRadius="12dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="4dp">
            <LinearLayout

                android:background="@drawable/card_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal|center_vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/puubg"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:textSize="@dimen/small_text"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/txt_clr"
                    android:text="PUBG Pins"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>